# MicroLM

./: .gitignore  CITATION.cff  ENVIRONMENT.md  LICENSE  Makefile  README.md  hollow_chains_research_report.md  pyproject.toml
configs/: generate.yaml  metrics.yaml  model_ladder.yaml  pretrain.yaml  scale_ladder.yaml  sft.yaml  smoke.yaml  tokenizer.yaml
data/: README.md
notebooks/: 00_setup_colab.ipynb  01_pretrain_ladder.ipynb  03_generate_emergence.ipynb  README.md
notebooks/legacy/: 00_setup_colab.ipynb  01_pretrain_ladder.ipynb  02_sft_sweeps.ipynb  03_generate_emergence.ipynb  README.md
paper/: build_figures.py
scripts/: compute_metrics.py  create_notebooks.py  gen_teacher_data.py  train_tokenizer.py
src/hollow_chains/: __init__.py  config.py
src/hollow_chains/cli/: compute_metrics.py
src/hollow_chains/corruption/: __init__.py  bitflip.py  quantize.py
src/hollow_chains/data/: __init__.py  build_reasoning_sft.py  pretrain_data.py  schema.py  sft_format.py  tasks.py  teacher_hf.py  tokenizer.py
src/hollow_chains/eval/: aggregate.py  generate.py  recipes.py  run_degradation.py  run_emergence.py
src/hollow_chains/metrics/: __init__.py  gap.py  parse.py  semantic.py  structural.py
src/hollow_chains/models/: __init__.py  ladder.py
src/hollow_chains/train/: __init__.py  pretrain.py  sft.py
src/hollow_chains/utils/: __init__.py  seed.py
src/hollow_chains/viz/: __init__.py  plots.py
tests/: __init__.py  conftest.py  test_config.py  test_external_sft_smoke.py  test_generation_recipes.py  test_metrics.py  test_pipeline_smoke.py  test_qwen_to_schema.py
